2006-12-16  Per Bothner  <per@bothner.com>

	* XMLParser.java (XMLStreamReader): New static method.
	(parse): Use it.

	* XMLParser.java (parse): Call incrLineNumber immediately at each
	line, rather than deferring it.

2006-12-15  Per Bothner  <per@bothner.com>

	* XMLFilter.java (closeStartTag): If out is a ContentConsumer, call
	endStartTag so it happens earlier, with correct line position.

2006-12-14  Per Bothner  <per@bothner.com>

	* XMLParser.java.in: Removed.  Replaced by ...
	* XMLParser.java: New file.  Based on XMLParser.java.in, but with
	byte variant removed.  Handwire using XMLFIlter and LineBufferedReader.
	Do line-ending handling here.
	Also handle encoding declaration.
	(parse): New static method.
	* Makefile.am: Update ccordingly.
	* XMLFilter.java: Also implement SourceLocator.
	(setSourceLocator): New method.
	(setLocator): Remove redundant method.
	(textFromParser): Simplify - line-ending handling now done in XMLParser.
	(SAW_CR): Removed constant - no longer needed.
	(linefeedFromParser): New method.

	* XMLFilter.java (inElement): New method.
	(emitEndElement, processingInstructionFromParser): Use it.

	* XMLFilter.java (emitEndAttributes): Do closeStartTag().

	* XMLFilter.java: Implement DocumentHandler, ContentHandler if SAX2.
	(setDocumentLocator, startElement*2, endElement*2, characters,
	ignorableWhitespace, processingInstruction, skippedEntity):
	Moved methods from ConsumeSAXHandler.
	(startPrefixMapping, endPrefixMapping): Ditto, but with implementation.

2006-12-06  Per Bothner  <per@bothner.com>

	* XMLParser.java.in: Update for renamed Consumer methods.
	* NamedChildrenFilter.java: Likewise.
	* XMLPrinter.java: Likewise.
	* NodeTree.java: Likewise.
	* XMLFilter.java: Likewise.

	* XMLFilter.java (textFromParser): Fix test for nesting.

2006-11-25  Per Bothner  <per@bothner.com>

	* TextUtils.java: New file, moved from gnu.kawa.xml.StringValue.
	(textValue): Moved from MakeText and renamed from text$C.